# notebooklm-tui

./: .gitignore  README.ja.md  README.md  debug_pdf.py  list_files.py  nlm_backup.py  nlm_login.py  nlm_tui.py  nlm_tui_curses.py  nlm_tui_en.py  nlm_upload.py  notebooklm_client.py  pyproject.toml
.github/workflows/: tests.yml
tests/: test_offline_helpers.py
